sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: unclosed character literal
    print ( blancrouge + '      k     ' )
                         ^DutchFlagAlgo:7: error: unclosed character literal
    print ( blancrouge + '      k     ' )
                                      ^DutchFlagAlgo:7: error: ')' expected but something found.
    print ( blancrouge + '      k     ' )
                         ^DutchFlagAlgo:8: error: ';' expected but ')' found.
    if (getCouleur(i)==ROUGE){
                            ^